# contacts-app

./: .gitignore  CMakeLists.txt  main.qml  qml.qrc
qml/: PersonListView.qml
src/: CMakeLists.txt  main.cpp  persondetail.cpp  persondetail.h  personlist.cpp  personlist.h  personmodel.cpp  personmodel.h  personquery.h
src/qml/: PersonDetailView.qml  PersonListView.qml
